@@ -6,6 +6,7 @@ Cleaned up many CamelCaps and ALLCAPS function names
 All authentication now uses sessions instead of cookies
 check_login now performs both the checking of login/authentication, but also updates the session (like update_cookie used to do)
 Main menu now includes an admin menu link if you are logged in with the adminmail account
+Main menu now includes a clickable link for score, which allows a player to trigger the function
 
 TheKabal (18 August 2012)
 --------------------------------------
